# docker-compose-playground

./: README.md  sample-script.sh
.github/workflows/: greetings.yml
R/plumber/: docker-compose.yml
go/: Dockerfile  docker-compose.yml  server.go
groonga/: docker-compose.yml
haskell/scotty-sample/: .gitignore  scotty-sample.cabal
haskell/servant-sample/: Dockerfile  docker-compose.yml  servant-sample.cabal
haskell/servant-sample/nginx/: nginx.conf
haskell/wai-sample/: Dockerfile  Makefile  docker-compose.yml  stack.yaml  wai-sample.cabal
haskell/wai-sample/nginx/: nginx.conf
haskell/wai-sample/src/: Main.hs
ruby/: Dockerfile  docker-compose.yml
rust/hello-rust/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
rust/hello-rust/src/: main.rs
