[package]
name = "hello-rust"
version = "0.1.0"
authors = ["naofumi-fujii <naofumi.fujii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
pretty_env_logger = "0.3.1"

[dev-dependencies]
rls = "*"
